<resources>
    <string name="app_name">CameraVision</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">This application configures the camera to automatically take photos at a specified interval. Each photo overwrites the next. This allows another application (such as a robot control application) to sample the image file at regular intervals in order to make altimetry decisions.</string>
    <string name="SelectPhotoInterval">Interval to take photos:</string>
    <string name="SelectFilePath">Photo file path:</string>
    <string name="pathSave">/sdcard/DCIM/CameraVision.jpg</string>
    <string name="milliSeconds">milliSeconds</string>
    <string name="btnSaveConfig">Save Configuration</string>
    <string name="btnStartSvc">Start Service</string>
    <string name="btnStopSvc">Stop Service</string>
    <string name="svcRunning">CameraVision Service is ACTIVE.</string>
    <string name="svcOn">Service Online</string>
    <string name="svcOff">Service Offline</string>
    <string-array name="interval_array">
        <item>10000</item>
        <item>5000</item>
        <item>1000</item>
        <item>500</item>
        <item>250</item>
    </string-array>
</resources>
