<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_camera_vision"
    tools:context=".CameraVision"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">
            <TextView android:text="@string/app_description"
                android:textSize="8pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView android:text="@string/SelectPhotoInterval"
                android:layout_marginTop="10dp"
                android:textSize="12pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner android:id="@+id/spnrInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/milliSeconds"
                android:entries="@array/interval_array"/>
            <TextView android:text="@string/SelectFilePath"
                android:layout_marginTop="10dp"
                android:textSize="12pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText android:id="@+id/filepath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pathSave"/>
            <Button android:id="@+id/btnSaveConfig"
                android:onClick="SaveConfig"
                android:text="@string/btnSaveConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button android:id="@+id/btnStartSvc"
                android:text="@string/btnStartSvc"
                android:onClick="StartCVService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Button android:id="@+id/btnStopSvc"
                android:text="@string/btnStopSvc"
                android:onClick="btnStopCVService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/svcOff"
                android:textSize="14pt"
                android:textColor="@color/svcOff"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

